--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
             android:layout_above="@+id/spinner"
             android:layout_alignEnd="@+id/roll_btn"
             android:layout_marginBottom="50dp"
-            android:text="Score:" />
+            android:text="Score: 0" />
 
         <TextView
             android:id="@+id/numRolls_view"
