-Application is now functionally sound. -Still missing some updates on comments.

--- a/app/src/main/res/layout/scoring.xml
+++ b/app/src/main/res/layout/scoring.xml
@@ -3,6 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/newGameBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_centerHorizontal="true"
+        android:layout_weight="1"
+        android:text="New Game" />
+
     <TextView
         android:id="@+id/final_score"
         android:layout_width="wrap_content"
@@ -15,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="40dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout2">
 
         <LinearLayout
             android:layout_width="match_parent"
