--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,21 +21,17 @@
             android:id="@+id/roll_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/next_round"
-            android:layout_alignBottom="@+id/next_round"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="80dp"
-            android:text="Roll Dice" />
+            android:text="Roll Dice"
+            android:layout_below="@+id/include2"
+            android:layout_alignEnd="@+id/reminderText" />
 
         <Button
             android:id="@+id/next_round"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Next Round"
             android:layout_below="@+id/include2"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="37dp"
-            android:layout_toStartOf="@+id/roll_btn"
-            android:text="Next Round" />
+            android:layout_alignStart="@+id/reminderText" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -49,29 +45,27 @@
             android:id="@+id/score_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Score: 0"
             android:layout_above="@+id/spinner"
-            android:layout_alignEnd="@+id/roll_btn"
-            android:layout_marginBottom="50dp"
-            android:text="Score: 0" />
+            android:layout_alignEnd="@+id/reminderText" />
 
         <TextView
             android:id="@+id/numRolls_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/next_round"
-            android:layout_alignTop="@+id/score_view"
-            android:text="Rolls Left:" />
+            android:text="Rolls Left:"
+            android:layout_above="@+id/spinner"
+            android:layout_alignStart="@+id/reminderText" />
 
         <TextView
             android:id="@+id/reminderText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="19dp"
-            android:textSize="12sp"
             android:text="Remember to select all, and only, the dice you want to score"
-            android:textStyle="italic" />
+            android:textSize="12sp"
+            android:textStyle="italic"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
