--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.axel.thirtyupg1.GameActivity">
+    tools:context="se.umu.student.axever0002.GameActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,17 +25,19 @@
             android:layout_alignBottom="@+id/next_round"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="80dp"
+            android:width="40dp"
             android:text="Roll Dice" />
 
         <Button
             android:id="@+id/next_round"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="39dp"
+            android:width="40dp"
+            android:text="Next Round"
             android:layout_below="@+id/include2"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="37dp"
             android:layout_toStartOf="@+id/roll_btn"
-            android:text="Next Round" />
+            android:layout_marginEnd="45dp" />
 
         <Spinner
             android:id="@+id/spinner"
